unpackaged/main/default/objects/WaterfallAPISettings__mdt/WaterfallAPISettings__mdt.object-meta.xml
<CustomObject>
    <label>WaterfallAPISettings</label>
    <pluralLabel>WaterfallAPISettings</pluralLabel>
</CustomObject>