unpackaged/main/default/objects/WaterfallAPISettings__mdt/fields/AuthKey__c.field-meta.xml
<CustomField>
    <fullName>AuthKey__c</fullName>
    <label>AuthKey</label>
    <length>40</length>
    <type>Text</type>
</CustomField>