unpackaged/main/default/objects/WaterfallAPISettings__mdt/fields/ChargeItOptinFlowId__c.field-meta.xml
<CustomField>
    <fullName>ChargeItOptinFlowId__c</fullName>
    <label>ChargeItOptinFlowId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>