unpackaged/main/default/objects/WaterfallAPISettings__mdt/fields/PrefCenterOptinFlowId__c.field-meta.xml
<CustomField>
    <fullName>PrefCenterOptinFlowId__c</fullName>
    <label>PrefCenterOptinFlowId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>