unpackaged/main/default/objects/WaterfallAPISettings__mdt/fields/WfShortCode__c.field-meta.xml
<CustomField>
    <fullName>WfShortCode__c</fullName>
    <label>WfShortCode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>